# shared-components

arduinojson/: CMakeLists.txt  idf_component.yml
blinkShared/: CMakeLists.txt  idf_component.yml
blinkShared/include/: myshared.h
blinkShared/src/: myshared.cpp
controller/: CMakeLists.txt
controller/include/: ACMonitor.h  AcUpdateTask.h  ClientInfo.h  ClientsList.h  GenRelay.h  Icon.h.v1  Icon.h.v2  IconData.h  LedController.h  OtaManager.h  Pages.h  Pages.h.v1  SharedDataStore.h  Valves.h  WsReceiver.h  WsServerMgr.h  nvsMgr.h  pwa_files.h  r33Client.h  r33SlaveController.h  slavePages.h  slavePages.h.v1  version.h  wifiMgr.h  wsServer.h
controller/src/: ACMonitor.cpp  ClientsList.cpp  IconData.cpp  LedController.cpp  OtaManager.cpp  SharedDataStore.cpp  Valves.cpp  WsReceiver.cpp  WsServerMgr.cpp  nvsMgr.cpp  r33Client.cpp  r33SlaveController.cpp  system.cpp  version.cpp  wifiMgr.cpp  wsServer.cpp
